--- a/log-message-processor/Jenkinsfile
+++ b/log-message-processor/Jenkinsfile
@@ -8,8 +8,8 @@ node {
 	stage('Build and push') {
 	   
 	          
-            dir ('account-service') {
-                  def app = docker.build "private-registry:5000/log-message-processor:v1."${env.BUILD_NUMBER}
+            dir ('log-message-processor') {
+                  def app = docker.build "private-registry:5000/log-message-processor:v1.${env.BUILD_NUMBER}" .
                   app.push()
            }
 		
