--- a/log-message-processor/Jenkinsfile
+++ b/log-message-processor/Jenkinsfile
@@ -5,18 +5,28 @@ node {
         }
 
         
-	stage('Build and push') {
-	   
-	          
-            dir ('log-message-processor') {
-                  def app = docker.build "private-registry:5000/log-message-processor:v1.${env.BUILD_NUMBER}" .
-                  app.push()
-           }
+	stage('Docker Build and Publish') {
+		buildAndPush('private-registry:5000',"${env.JOB_NAME}", 'v1');
+        }
 		
+
+	
+}
+
+
+def buildAndPush(registryID, imageName, version){
+    def app
+    try {
+	    dir ('log-message-processor') {
+		    
+	    //app = docker.build("${registryID}/${imageName}")
+            //app.push("${version}.${env.BUILD_NUMBER}")
+            app = docker.build "private-registry:5000/log-message-processor:v1" .
+            app.push()
+		    
+	    }
+	    
+	} catch (error){
+		sh 'echo "Not able to build and push docker image ${error}"'
 	}
-	
-	
-
-    
-
 }
