--- a/log-message-processor/Dockerfile
+++ b/log-message-processor/Dockerfile
@@ -2,10 +2,10 @@ FROM python:3.6-alpine
 
 WORKDIR /usr/src/app
 RUN apk add --no-cache build-base
-COPY requirements.txt .
+COPY requirements.txt requirements.txt
 RUN pip3 install -r requirements.txt
 
-COPY main.py .
+COPY main.py main.py
 
 CMD ["python3","-u","main.py"]
 
