--- a/log-message-processor/Jenkinsfile
+++ b/log-message-processor/Jenkinsfile
@@ -20,7 +20,7 @@ def buildAndPush(registryID, imageName, version){
 	    dir ('log-message-processor') {
 		    
 		    app = docker.build("${imageName}:${version}")
-                    app.push(${"env.BUILD_ID}")
+                    app.push("${env.BUILD_ID}")
              
              
 		    
