--- a/log-message-processor/Jenkinsfile
+++ b/log-message-processor/Jenkinsfile
@@ -6,8 +6,8 @@ node {
 
         
 	stage('Docker Build and Publish') {
-		buildAndPush('private-registry:5000','log-message-processor', 'v1');
-        }
+		buildAndPush('basivireddy', "${env.JOB_NAME}", 'v1');
+    }
 		
 
 	
@@ -19,8 +19,10 @@ def buildAndPush(registryID, imageName, version){
     try {
 	    dir ('log-message-processor') {
 		    
-		    app = docker.build("${imageName}:${version}.${env.BUILD_ID}")
-                    sh 'docker push "$registryID/${imageName}:${version}.${env.BUILD_ID}"'
+		app = docker.build("${registryID}/${imageName}")
+		docker.withRegistry('https://registry.hub.docker.com', 'docker-credentials') {
+		    app.push("${version}.${env.BUILD_NUMBER}")
+		    }
              
              
 		    
