--- a/log-message-processor/Jenkinsfile
+++ b/log-message-processor/Jenkinsfile
@@ -19,10 +19,10 @@ def buildAndPush(registryID, imageName, version){
     try {
 	    dir ('log-message-processor') {
 		    
-		app = docker.build("${imageName}")
-		docker.withRegistry('private-registry:5000') {
-		    app.push("${version}.${env.BUILD_NUMBER}")
-		}
+		    app = docker.build("${registryID}/${imageName}")
+		
+		app.push("${version}.${env.BUILD_NUMBER}")
+		
              		    
 	    }
 	    
