--- a/log-message-processor/Jenkinsfile
+++ b/log-message-processor/Jenkinsfile
@@ -6,7 +6,7 @@ node {
 
         
 	stage('Docker Build and Publish') {
-		buildAndPush('basivireddy', "${env.JOB_NAME}", 'v1');
+		buildAndPush( "${env.JOB_NAME}", 'v1');
     }
 		
 
@@ -14,12 +14,12 @@ node {
 }
 
 
-def buildAndPush(registryID, imageName, version){
+def buildAndPush( imageName, version){
     def app
     try {
 	    dir ('log-message-processor') {
 		    
-		    app = docker.build("${registryID}/${imageName}")
+		    app = docker.build("private-registry:5000/${imageName}")
 		
 		app.push("${version}.${env.BUILD_NUMBER}")
 		
